# dsm-ae

./: .gitignore  README.md  models.yaml  models.yaml.example  pyproject.toml
diagnosis/: DSM-AE-diagnostic-manual.md
docs/: CLEANUP_2026-07-18.md  HARBOR.md
metrics/: DSM-AE-metrics-catalog.md
pipeline/: DSM-AE-pipeline-plan.md  brainstorming-report.md
reports/: COMPARISON.md  COVERAGE.md  batch-nohup.out  dsm-ae-matrix.html  gpt-5.4-mini.json  gpt-5.4-mini.md  gpt-5.5-BLOCKED.md  gpt-5.5.json  gpt-5.5.md  grok-build-STATUS.txt  grok-build.json  grok-build.md  index.html  mock-all-packs.md  overeager.md  sloppy.md  unstable.md  well_attuned.json  well_attuned.md
research-notes/: p0_config.md  task-a-agency-overeagerness.md  task-b-sloppy-coding.md  task-c-social-cognitive-safety.md  task-d-eval-metrics-methods.md
scripts/: build_bloat_comparison.py  enqueue_bloat50.py  generate_batch_weak_gates.py  generate_metric_appendix.py  harbor_export_all_packs.py  harbor_run_job.py  json_to_html_report.py  monitor_14packs.py  monitor_pangu_latency.py  monitor_tier23_queue.py  monitor_tier2_sol.py  monitor_treatment_luna.py  restart_serve_when_idle.py  run_backfill_china_slop.sh  run_backfill_pangu.sh  run_backfill_proxy.sh  run_full_suite_claude.sh  run_full_suite_deepseek_glm.sh  run_full_suite_new_models.sh  run_full_suite_pangu.sh  run_full_suite_via_queue.sh  run_grok_build_diag.py  run_ma_remaining.sh  run_model_batch.sh  run_new_packs_grok.py  run_repro_10_parallel_trials.py  run_repro_14packs_all_models.py  run_repro_china_resume.py  run_repro_gpt_proxy_only.py  (+10 more)
(+372 files in other folders)
