[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsm-ae"
version = "0.1.0"
description = "DSM Agentic Edition — Diagnostic Statistical Manual for agentic ill-behaviours"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.optional-dependencies]
llm = ["litellm>=1.40"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[project.scripts]
dsm-ae = "dsm_ae.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
